# json2csv

./: .coverage.claude.pid8.Xsd3zatx.HxXnU2hk7Mkh  .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/json2csv/: __init__.py  cli.py  json2csv.py
tests/: test_cli.py  test_json2csv.py
